--- a/templates/draft_detail.html
+++ b/templates/draft_detail.html
@@ -12,57 +12,124 @@
            margin-bottom: px;
     }
 
+
 </style>
+
+<div class="col-md-2 float-right ">
+    <div class="card my-2">
+        <h5 class="card-header">Create Milestone</h5>
+        <div class="card-body">
+            <p class="card-text"> {{ user.first_name }} Create Milestone?</p>
+            <a href="{% url 'base:milestone_create' issue.id %}"
+               class="btn btn-success">create!</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-2 float-right ">
+    <div class="card my-2">
+        <h5 class="card-header">Create Assignees</h5>
+        <div class="card-body">
+            <p class="card-text"> {{ user.first_name }} Create Assignees?</p>
+            <a href="{% url 'update:assignee_update' issue.id %}"
+               class="btn btn-success">create!</a>
+        </div>
+    </div>
+</div>
 <div class="col-md-4 card mb-4  mt-3 ">
-      <div class="card-body">
+    <div class="card-body">
         <h1>Edit Issue</h1>
+        {% if issue.weight is not None %}
+        <p>weight: {{ issue.weight }}</p>
+        {% endif %}
+
         {% load crispy_forms_tags %}
         <form method="post" style="margin-top: 1.3em;">
-          <p>status open {{ form.open }}</p>
+            {% if issue.open == True %}
+            <p>status is open</p>
+            {% else %}
+            <p>status is closed</p>
+            {% endif %}
+            <p>status {{ form.open }}</p>
+            <p>Weight {{ form.weight }}</p>
             <p>like {{ form3.like }}</p>
             <p>dislike{{ form3.dislike }}</p>
-          {% csrf_token %}
-          <button type="submit" class="btn btn-primary  btn-lg" style="margin-left:auto;margin-right:auto;display:block;margin-top:5%;margin-bottom:0%">Post</button>
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary  btn-lg"
+                    style="margin-left:auto;margin-right:auto;display:block;margin-top:5%;margin-bottom:0%">Post
+            </button>
         </form>
-           <a href="{% url 'base:project_detail' project.project_id %}"  style="text-align: right;
+        <a href="{% url 'base:project_detail' project.project_id %}" style="text-align: right;
     float: right;">project</a>
-      </div>
     </div>
-<div>
-
-
+    <p>
+        <a href="{% url 'update:label_update' issue.id %}" style="text-align: right;
+    float: right;">Label Color</a>
+    </p>
+    <p>Likes: {{ total_likes }}</p>
+    <p>Dislikes: {{ total_dislikes }}</p>
+    {% if assignee is not None %}
+    {% for members in assignee %}
+    <p>assignee: {{ members }}</p>
+    {% endfor %}
+    {% endif %}
 </div>
 
+
+{% if milestone is not None %}
 <div class="col-md-8 card mb-4  mt-3 ">
-      <div class="card-body">
+    <div class="card-body">
+        <!-- comments -->
+        <h2>{{ milestone.count }} Milestone</h2>
+
+        {% for m in milestone %}
+        <div class="comments" style="padding: 10px;">
+            <p class="font-weight-bold">
+                {{ m.title }}
+                <span class=" text-muted font-weight-normal">
+            {{ m.description | linebreaks }}
+            </span>
+            </p>
+            <a href="" style="text-align: right;
+    float: right;">Edit</a>
+            {% if m.start_date or m.Due_date %}
+            <p>Start Date: {{ m.start_date }}</p>
+            <p>Due Date: {{ m.Due_date }}</p>
+            {% endif %}
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endif %}
+
+
+<div class="col-md-8 card mb-4  mt-3 ">
+    <div class="card-body">
         <!-- comments -->
         <h2>{{ comment.count }} comments</h2>
 
         {% for com in comment %}
         <div class="comments" style="padding: 10px;">
-          <p class="font-weight-bold">
-            {{ com.user }}
-            <span class=" text-muted font-weight-normal">
+            <p class="font-weight-bold">
+                {{ com.user }}
+                <span class=" text-muted font-weight-normal">
               {{ com.created_on }}
             </span>
-          </p>
-          {{ com.comment | linebreaks }}
+            </p>
+            {{ com.comment | linebreaks }}
         </div>
         {% endfor %}
-      </div>
     </div>
-    <div class="col-md-8 card mb-4  mt-3 ">
-      <div class="card-body">
-
+</div>
+<div class="col-md-8 card mb-4  mt-3 ">
+    <div class="card-body">
         <h3>Leave a comment</h3>
         {% load crispy_forms_tags %}
         <form method="post" style="margin-top: 1.3em;">
-          {{ form2 | crispy }}
-          {% csrf_token %}
-          <button type="submit" class="btn btn-primary  btn-lg">Comment</button>
+            {{ form2 | crispy }}
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary  btn-lg">Comment</button>
         </form>
-      </div>
     </div>
+</div>
 
 {% endblock %}
-
