--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -29,21 +29,24 @@
           float: none;
            margin-bottom: px;
     }
+
 </style>
 <!--background-image: url('{% static "img/image2.jpg" %}');-->
 
 <div class="col-md-4 card mb-4  mt-3 ">
-      <div class="card-body">
+    <div class="card-body">
 
         {% load crispy_forms_tags %}
         <form method="post" style="margin-top: 1.3em;">
-          {{ form | crispy }}
-          {% csrf_token %}
-          <button type="submit" class="btn btn-primary  btn-lg" style="margin-left:auto;margin-right:auto;display:block;margin-top:5%;margin-bottom:0%">Login</button>
+            {{ form | crispy }}
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary  btn-lg"
+                    style="margin-left:auto;margin-right:auto;display:block;margin-top:5%;margin-bottom:0%">Login
+            </button>
         </form>
-          <a href="{% url 'accounts:signup' %}"  style="text-align: right;
+        <a href="{% url 'accounts:signup' %}" style="text-align: right;
     float: right;">Create User</a>
-      </div>
     </div>
+</div>
 
 {% endblock %}
