--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -46,6 +46,8 @@
         </form>
         <a href="{% url 'accounts:signup' %}" style="text-align: right;
     float: right;">Create User</a>
+        <a href="{% url 'accounts:validate_username' %}" style="text-align: left;
+    float: left;">Forgot Password</a>
     </div>
 </div>
 
