--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -45,9 +45,9 @@ button:hover, a:hover {
     <img src="img.jpg" alt="" style="width:100%">
     <h1>{{ user.username }}</h1>
     <p class="title"></p>
-    <p>Blogger</p>
+    <p>Programmer</p>
     {% endif %}
-    <a href="#"><i class="fa fa-dribbble"></i></a>
+    <a href="{% url 'accounts:password_change' user.username %}"><i class="fa fa-dribbble">Change Password</i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
     <a href="#"><i class="fa fa-facebook"></i></a>
